feat: add security monitoring
